# anolegkr_bot_remnawave

./: .env.example  CREDITS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/bot/handlers/: __init__.py  admin.py  donate.py  menu.py  start.py  subscribe.py
app/bot/keyboards/: __init__.py  donate.py  main_menu.py
app/core/: config.py  database.py  logger.py
app/models/: user.py
app/services/: notifications.py  payments.py  remnawave.py
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: .gitkeep
tests/: test_bot.py
